manifest/banana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: banana
  #namespace: development
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /banana
        backend:
          serviceName: banana-service
          servicePort: 5678
